Update ElementItem.java